bobcat (1.17.1)

  * Removed Wrap* wrappers from Bisonc++. Use FnWrap* instead.

  * Added member rfc2822() to DateTime returning the time according to
    RFC 2822 (e.g., as displayed by the `date -R' command.

  * Partial construction and installation of the Bobcat library is now 
    supported via #defines in INSTALL.im

  * Minor modifications to satify g++4-3's #include requirements

  * TEMPORARILY suppressed the `deprecated header warning' resulting from
    using ext/hash_map in bobcat/hash. The fix is a kludge: the warning is
    suppressed by defining the backward warning include guard identifier just
    prior to including ext/hash_map and by undefining it thereafter.

bobcat (1.17.0)

  * Repaired double free bug in Pattern
  
  * Changed the implementation and interface of MailHeaders. See 'man -e
    bobcat mailheaders' for details

  * Process::init() member removed. setCommand() added, and constructors no
    longer call the process start() member. They shouldn't as start() forks,
    and forking an object that isn't constructed yet seems to be
    inappropriate. The open() call in init() is now placed in
    start(). Therefore the correct sequence becomes: 
    Process(), start(), ...(insert/extract)..., stop(). Process::operator=()
    now performs: stop(), setCommand(), start(). Multiple stops() could be
    given, so ... stop(), operator=(), ... is acceptable.
    The Process man-page is updated accordingly.

  * The DateTime class has been enlarged. It now contains members to reassign
    individual time components as well as members to compare the (in)equality
    of the times represented by two DateTime objects. Trailing \n is not
    inserted anymore if a DateTime object is inserted into an
    ostream. Operators +, -, += and -= for DateTime rvalues removed, since a
    date is an interval scaled data type. It is, however, possible to add or
    subtract seconds (or even struct tm structs) and to add/set values to