@@ -1,2 +1,2 @@
-VERSION=1.17.1
-YEARS=2005-2007
+VERSION=1.17.2
+YEARS=2005-2008
