@@ -18,6 +18,26 @@
 using namespace std;
 using namespace FBB;
 
+// This example illustrates the use of the unordered_map, available from
+//  g++-4.3. It also illustrates that consecutive > chars in template type
+//  definitions no longer confuse the compiler.
+//
+// int main(int argc, char *const *const argv)
+// {
+//     pair<char const *, int> d[] = 
+//     {
+//         pair<char const *, int>("aap", 18),
+//         pair<char const *, int>("noot", 20),
+//         pair<char const *, int>("wim", 30)
+//     };
+// 
+//     unordered_map<char const *, int, hash<char const *>> hcp(d, d + 3);
+// 
+//     cout << hcp["noot"] << endl;
+// 
+//     return 0;
+// }
+
 class Hash
 {
     public: 
