@@ -1,3 +1,14 @@
+bobcat (1.17.2)
+
+  * Arg's constructors changed in accordance with the new (?) getopt()
+    function: missing option arguments are now properly recognized and no
+    longer confused with `unknown options'
+
+  * The Table man-page incorrectly listed `Table const &' as its second
+    argument. The modifier `const' is incorrect as the insertion may imply
+    the addition of empty elements to the table in order to make it
+    rectangular. The `const' modifier was removed from the man-page.
+
 bobcat (1.17.1)
 
   * Removed Wrap* wrappers from Bisonc++. Use FnWrap* instead.
